objects/Attends_Hidden_for_Review__c.object
<CustomObject>
    <fields>
        <fullName>AccName__c</fullName>
        <formula>Visit_Attendee_Account__r.Attendee__r.AccountName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attend_Name__c</fullName>
        <formula>Visit_Attendee_Account__r.Attendee_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attend Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Business_Review__c</fullName>
        <label>Channel Partner Business Review</label>
        <referenceTo>Channel_Business_Review__c</referenceTo>
        <relationshipLabel>Attends Hidden for Review</relationshipLabel>
        <relationshipName>Attends_Hidden_for_Review</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <formula>Visit_Attendee_Account__r.Attendee__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Attendee_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Attendee Acccount</label>
        <referenceTo>Visit_Attendee__c</referenceTo>
        <relationshipLabel>Attends Hidden for Review</relationshipLabel>
        <relationshipName>Attends_Hidden_for_Review</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_Report_Meeting_Minutes__c</fullName>
        <label>Visit Report Meeting Minutes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Attends Hidden for Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attends Hidden for Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attends Hidden for Review</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>